[gd_scene load_steps=41 format=3 uid="uid://dt7c7s4m52uwy"]

[ext_resource type="Material" uid="uid://d11p8drbs5bo8" path="res://Fnt, Img, Snd, Env, Tex/Textures/GreenGrid.tres" id="1_mx2xs"]
[ext_resource type="Material" uid="uid://b4p7kyojic6jg" path="res://Assets/Particals/Waterfall/Waterfall.tres" id="2_xe4rh"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter.gd" id="3_dy4ab"]
[ext_resource type="Environment" uid="uid://jv8m6qpsm8hm" path="res://Scenes/Menus/WorldEnv.tres" id="3_fwna7"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/stack/modifier_stack.gd" id="4_dev66"]
[ext_resource type="Script" path="res://Scenes/Worlds/WorldEnvironment.gd" id="4_peol0"]
[ext_resource type="Script" path="res://Scenes/Worlds/DirectionalLight3D.gd" id="5_3w8ak"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_random.gd" id="5_alijo"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/randomize_transforms.gd" id="6_8lbla"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/relax.gd" id="7_vi0ol"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/project_on_geometry.gd" id="8_t5esy"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_item.gd" id="9_5mhlx"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_shape.gd" id="10_qp0vb"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/box_shape.gd" id="11_uy0ay"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/sphere_shape.gd" id="12_ni6i1"]
[ext_resource type="FontFile" uid="uid://bt0htiehpoxc6" path="res://Fnt, Img, Snd, Env, Tex/Fonts/Rubik-Bold.ttf" id="13_7gljy"]
[ext_resource type="PackedScene" uid="uid://c7ga4svhijdy5" path="res://Assets/blend Meshes/Bridge.blend" id="14_8r012"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="15_aibim"]
[ext_resource type="PackedScene" uid="uid://bu1embbija8wm" path="res://Assets/blend Meshes/Log.blend" id="15_siia3"]
[ext_resource type="Texture2D" uid="uid://cwbvw2xx8416n" path="res://Fnt, Img, Snd, Env, Tex/Images/Discord.png" id="17_413mg"]
[ext_resource type="Texture2D" uid="uid://dj0xlkwdj0upu" path="res://Fnt, Img, Snd, Env, Tex/Images/Youtube.png" id="18_vbw2m"]
[ext_resource type="Texture2D" uid="uid://bwuw3hcniakw8" path="res://Fnt, Img, Snd, Env, Tex/Images/Ko-fi.png" id="19_uea01"]
[ext_resource type="Script" path="res://Scenes/Menus/Graphics_settings.gd" id="21_ttof6"]
[ext_resource type="PackedScene" uid="uid://ggfpgsa2fuda" path="res://Scenes/Menus/fps_label.tscn" id="24_wycgy"]
[ext_resource type="PackedScene" uid="uid://cymb87r5gtdty" path="res://Scenes/Menus/volume_slider.tscn" id="25_d1qyr"]
[ext_resource type="AudioStream" uid="uid://cyp0u6bl63war" path="res://Fnt, Img, Snd, Env, Tex/Sound/Spiral Mountain.wav" id="26_qs8pt"]

[sub_resource type="Resource" id="Resource_82ram"]
script = ExtResource("5_alijo")
amount = 1000
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_suxr0"]
script = ExtResource("6_8lbla")
position = Vector3(0.15, 0.15, 0.15)
rotation = Vector3(20, 360, 20)
scale = Vector3(0.1, 0.1, 0.1)
enabled = false
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_pk4l7"]
script = ExtResource("7_vi0ol")
iterations = 3
offset_step = 0.2
consecutive_step_multiplier = 0.75
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_htohy"]
script = ExtResource("8_t5esy")
ray_direction = Vector3(0, -1, 0)
ray_length = 5.0
ray_offset = 5.0
remove_points_on_miss = false
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_00y0s"]
script = ExtResource("4_dev66")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_82ram"), SubResource("Resource_suxr0"), SubResource("Resource_pk4l7"), SubResource("Resource_htohy")])

[sub_resource type="Resource" id="Resource_dyp41"]
script = ExtResource("11_uy0ay")
size = Vector3(30.6095, 1, 12.2656)

[sub_resource type="Resource" id="Resource_wvwby"]
script = ExtResource("11_uy0ay")
size = Vector3(9.60057, 1, 5.77901)

[sub_resource type="Resource" id="Resource_bg4l3"]
script = ExtResource("11_uy0ay")
size = Vector3(4.4713, 1, 1.92491)

[sub_resource type="Resource" id="Resource_b76rf"]
script = ExtResource("12_ni6i1")
radius = 0.646438

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1kk4u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bfhaf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wanmh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bpiee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_38gns"]

[node name="MainMenu" type="CanvasLayer"]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_qs8pt")
autoplay = true
bus = &"Music"

[node name="Background" type="Node3D" parent="."]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Background"]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Background/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.24043)
size = Vector3(66, 1, 12.9963)
material = ExtResource("1_mx2xs")

[node name="CSGBox3D2" type="CSGBox3D" parent="Background/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, -10)
size = Vector3(56, 14, 1)
material = ExtResource("2_xe4rh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background"]
environment = ExtResource("3_fwna7")
script = ExtResource("4_peol0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Background"]
transform = Transform3D(-0.977464, -0.152428, -0.146047, -0.139226, -0.0545621, 0.988756, -0.158683, 0.986807, 0.0321106, 9.864, 11.946, -3.33786e-06)
shadow_enabled = true
script = ExtResource("5_3w8ak")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 3.925, 2.92)

[node name="FogVolume" type="FogVolume" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.863344, -3.37528)
size = Vector3(27.4748, 1.00691, 13.7496)

[node name="ProtonScatter" type="Node3D" parent="Background"]
script = ExtResource("3_dy4ab")
modifier_stack = SubResource("Resource_00y0s")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="Background/ProtonScatter"]
script = ExtResource("9_5mhlx")
source_scale_multiplier = 0.45
path = "res://Assets/Grass/stylized_grass.tscn"

[node name="ScatterShape" type="Node3D" parent="Background/ProtonScatter"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0.658305, -3.33533)
script = ExtResource("10_qp0vb")
shape = SubResource("Resource_dyp41")

[node name="ScatterShape2" type="Node3D" parent="Background/ProtonScatter"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0.715277, 0.658305, -5.44123)
script = ExtResource("10_qp0vb")
negative = true
shape = SubResource("Resource_wvwby")

[node name="ScatterShape3" type="Node3D" parent="Background/ProtonScatter"]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 2.17409, 0.658305, -1.04679)
script = ExtResource("10_qp0vb")
negative = true
shape = SubResource("Resource_bg4l3")

[node name="ScatterShape4" type="Node3D" parent="Background/ProtonScatter"]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 4.04793, 0.658305, -1.66199)
script = ExtResource("10_qp0vb")
negative = true
shape = SubResource("Resource_b76rf")

[node name="Bridge" parent="Background" instance=ExtResource("14_8r012")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.760297, 0.552137, -5.33255)

[node name="Log" parent="Background" instance=ExtResource("15_siia3")]
transform = Transform3D(0.513466, 0, 0.85811, 0, 1, 0, -0.85811, 0, 0.513466, 2.24668, 0.769969, -1.03385)

[node name="Log2" parent="Background" instance=ExtResource("15_siia3")]
transform = Transform3D(7.06619e-10, -1, -1.10388e-11, 0.0156201, 0, 0.999878, -0.999878, -2.41044e-10, 0.0156201, 4.02586, -0.216242, -1.75475)

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_aibim")

[node name="MarginContainer" type="MarginContainer" parent="Ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("13_7gljy")
theme_override_font_sizes/font_size = 80
text = "ProjectAD"

[node name="MarginContainer" type="MarginContainer" parent="Ui/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2

[node name="StartWorld1Btn" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("13_7gljy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kk4u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bfhaf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wanmh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bpiee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_38gns")
text = "Start Demo
"

[node name="StartWorld1Btn2" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("13_7gljy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kk4u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bfhaf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wanmh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bpiee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_38gns")
text = "Start Grassland
"

[node name="StartWorld2Btn" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("13_7gljy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kk4u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bfhaf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wanmh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bpiee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_38gns")
text = "Start Graveyard"

[node name="StartWorld3Btn2" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("13_7gljy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kk4u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bfhaf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wanmh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bpiee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_38gns")
text = "Start Volcano"

[node name="OptionsBtn" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("13_7gljy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kk4u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bfhaf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wanmh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bpiee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_38gns")
text = "Options"

[node name="QuitBtn" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("13_7gljy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kk4u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bfhaf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wanmh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bpiee")
theme_override_styles/focus = SubResource("StyleBoxEmpty_38gns")
text = "Quit"

[node name="TextureButton" type="TextureButton" parent="Ui"]
layout_mode = 2
offset_left = 1079.0
offset_top = 835.0
offset_right = 1329.0
offset_bottom = 1085.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("17_413mg")

[node name="TextureButton2" type="TextureButton" parent="Ui"]
layout_mode = 2
offset_left = 1376.0
offset_top = 834.0
offset_right = 1626.0
offset_bottom = 1084.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("18_vbw2m")

[node name="TextureButton3" type="TextureButton" parent="Ui"]
layout_mode = 2
offset_left = 1651.0
offset_top = 828.0
offset_right = 1901.0
offset_bottom = 1078.0
size_flags_horizontal = 4
texture_normal = ExtResource("19_uea01")

[node name="FpsLabel" parent="." instance=ExtResource("24_wycgy")]

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("21_ttof6")

[node name="PanelContainer" type="PanelContainer" parent="Options"]
custom_minimum_size = Vector2(271.32, 339.46)
layout_direction = 3
layout_mode = 2
offset_left = 376.0
offset_top = 160.0
offset_right = 1440.0
offset_bottom = 864.0

[node name="VideoContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2
offset_left = 552.0
offset_top = 208.0
offset_right = 678.0
offset_bottom = 354.0

[node name="Label" type="Label" parent="Options/VideoContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
text = "VIDEO SETTINGS"

[node name="Resolution" type="Label" parent="Options/VideoContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resolution
"

[node name="ResolutionBtn" type="OptionButton" parent="Options/VideoContainer/Resolution"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 95.0
offset_right = 138.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
item_count = 5
selected = 2
popup/item_0/text = "640×480"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2
popup/item_3/text = "2560x1440"
popup/item_3/id = 3
popup/item_4/text = "3840x2160"
popup/item_4/id = 4

[node name="FrameRateCap" type="Label" parent="Options/VideoContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Frame Rate Cap"

[node name="FrameRateBtn" type="OptionButton" parent="Options/VideoContainer/FrameRateCap"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.345
offset_top = -15.5
offset_right = 129.345
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
item_count = 5
selected = 4
popup/item_0/text = "30 FPS"
popup/item_0/id = 0
popup/item_1/text = "60 FPS"
popup/item_1/id = 1
popup/item_2/text = "144 FPS"
popup/item_2/id = 2
popup/item_3/text = "240 FPS"
popup/item_3/id = 3
popup/item_4/text = "Uncapped"
popup/item_4/id = 4

[node name="WindowMode" type="Label" parent="Options/VideoContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Window Mode"

[node name="WindowBtn" type="OptionButton" parent="Options/VideoContainer/WindowMode"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.345
offset_top = -15.5
offset_right = 129.345
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
item_count = 3
selected = 0
popup/item_0/text = "Full Screen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="ShadowQuality" type="Label" parent="Options/VideoContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Shadow Quality
"

[node name="ShadowBtn" type="OptionButton" parent="Options/VideoContainer/ShadowQuality"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.345
offset_top = -15.5
offset_right = 129.345
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
item_count = 3
selected = 0
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="AudioContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2
offset_left = 1080.0
offset_top = 208.0
offset_right = 1210.0
offset_bottom = 324.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Options/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "AUDIO SETTINGS
"

[node name="MasterLabel" type="Label" parent="Options/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Master Volume"

[node name="Master" parent="Options/AudioContainer/MasterLabel" instance=ExtResource("25_d1qyr")]
layout_mode = 0
offset_left = 132.0
offset_top = 2.0
offset_right = 328.0
offset_bottom = 18.0
bus_name = "Master"

[node name="MusicLabel" type="Label" parent="Options/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Music Volume"

[node name="music" parent="Options/AudioContainer/MusicLabel" instance=ExtResource("25_d1qyr")]
layout_mode = 0
offset_left = 128.0
offset_top = 4.0
offset_right = 324.0
offset_bottom = 20.0
bus_name = "Music"

[node name="SfxLabel" type="Label" parent="Options/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sfx Volume"

[node name="sfx" parent="Options/AudioContainer/SfxLabel" instance=ExtResource("25_d1qyr")]
layout_mode = 0
offset_left = 117.0
offset_top = 6.0
offset_right = 313.0
offset_bottom = 22.0
bus_name = "Sfx"

[node name="AdvancedContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2
offset_left = 856.0
offset_top = 376.0
offset_right = 1127.0
offset_bottom = 715.0

[node name="Label" type="Label" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ADVANCED SETTINGS
"

[node name="ssr" type="CheckBox" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SSR"

[node name="ssao" type="CheckBox" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "SSAO"

[node name="ssil" type="CheckBox" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SSIL"

[node name="sdfgi" type="CheckBox" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "SDFGI"

[node name="shadows" type="CheckBox" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
button_pressed = true
text = "SHADOWS"

[node name="vsync" type="CheckBox" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "VSYNC/NOT WORKING"

[node name="glow" type="CheckBox" parent="Options/AdvancedContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "GLOW
"

[node name="DebugContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2
offset_left = 704.0
offset_top = 688.0
offset_right = 967.0
offset_bottom = 809.0

[node name="Label3" type="Label" parent="Options/DebugContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "DEBUG SETTINGS / NOT WORKING
"

[node name="Label" type="Label" parent="Options/DebugContainer"]
layout_mode = 2
text = "RUN SPEED
"

[node name="HSlider" type="HSlider" parent="Options/DebugContainer/Label"]
layout_mode = 0
offset_left = 111.73
offset_right = 453.73
offset_bottom = 16.0

[node name="Reset" type="Button" parent="Options/DebugContainer/Label"]
layout_mode = 0
offset_left = 483.92
offset_right = 537.92
offset_bottom = 31.0
text = "RESET
"

[node name="Label2" type="Label" parent="Options/DebugContainer"]
layout_mode = 2
text = "JUMP HEIGHT"

[node name="HSlider" type="HSlider" parent="Options/DebugContainer/Label2"]
layout_mode = 0
offset_left = 111.73
offset_right = 453.73
offset_bottom = 16.0

[node name="Reset" type="Button" parent="Options/DebugContainer/Label2"]
layout_mode = 0
offset_left = 483.92
offset_right = 537.92
offset_bottom = 31.0
text = "RESET
"

[node name="Button" type="Button" parent="Options/DebugContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "NOCLIP"

[node name="MainBackBtn" type="Button" parent="Options"]
layout_mode = 0
offset_left = 892.0
offset_top = 915.0
offset_right = 1083.0
offset_bottom = 1001.0
text = "Back"

[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/StartWorld1Btn" to="Ui" method="_on_start_world_1_btn_pressed"]
[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/StartWorld1Btn2" to="Ui" method="_on_start_world_1_btn_2_pressed"]
[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/StartWorld2Btn" to="Ui" method="_on_start_world_2_btn_pressed"]
[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/StartWorld3Btn2" to="Ui" method="_on_start_world_3_btn_2_pressed"]
[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/OptionsBtn" to="Ui" method="_on_options_btn_pressed"]
[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/QuitBtn" to="Ui" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Ui/TextureButton" to="Ui" method="_on_texture_button_pressed"]
[connection signal="pressed" from="Ui/TextureButton2" to="Ui" method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Ui/TextureButton3" to="Ui" method="_on_texture_button_3_pressed"]
[connection signal="item_selected" from="Options/VideoContainer/Resolution/ResolutionBtn" to="Options" method="_on_resolution_btn_item_selected"]
[connection signal="item_selected" from="Options/VideoContainer/FrameRateCap/FrameRateBtn" to="Options" method="_on_frame_rate_btn_item_selected"]
[connection signal="item_selected" from="Options/VideoContainer/WindowMode/WindowBtn" to="Options" method="_on_window_btn_item_selected"]
[connection signal="item_selected" from="Options/VideoContainer/ShadowQuality/ShadowBtn" to="Options" method="_on_shadow_btn_item_selected"]
[connection signal="toggled" from="Options/AdvancedContainer/ssr" to="Options" method="_on_ssr_toggled"]
[connection signal="toggled" from="Options/AdvancedContainer/ssao" to="Options" method="_on_ssao_toggled"]
[connection signal="toggled" from="Options/AdvancedContainer/ssil" to="Options" method="_on_ssil_toggled"]
[connection signal="toggled" from="Options/AdvancedContainer/sdfgi" to="Options" method="_on_sdfgi_toggled"]
[connection signal="toggled" from="Options/AdvancedContainer/shadows" to="Options" method="_on_shadows_toggled"]
[connection signal="toggled" from="Options/AdvancedContainer/vsync" to="Options" method="_on_vsync_toggled"]
[connection signal="toggled" from="Options/AdvancedContainer/glow" to="Options" method="_on_glow_toggled"]
[connection signal="pressed" from="Options/MainBackBtn" to="Ui" method="_on_back_btn_pressed"]
